add new content

--- a/assets/bibliography.bib
+++ b/assets/bibliography.bib
@@ -1,6 +1,160 @@
-@book{smith2010wealth,
-  title={The Wealth of Nations: An inquiry into the nature and causes of the Wealth of Nations},
-  author={Smith, Adam},
-  year={2010},
-  publisher={Harriman House Limited}
+
+@article{burke_hybrid_2002,
+	title = {Hybrid Recommender Systems: Survey and Experiments},
+	volume = {12},
+	issn = {1573-1391},
+	url = {https://doi.org/10.1023/A:1021240730564},
+	doi = {10.1023/A:1021240730564},
+	shorttitle = {Hybrid Recommender Systems},
+	abstract = {Recommender systems represent user preferences for the purpose of suggesting items to purchase or examine. They have become fundamental applications in electronic commerce and information access, providing suggestions that effectively prune large information spaces so that users are directed toward those items that best meet their needs and preferences. A variety of techniques have been proposed for performing recommendation, including content-based, collaborative, knowledge-based and other techniques. To improve performance, these methods have sometimes been combined in hybrid recommenders. This paper surveys the landscape of actual and possible hybrid recommenders, and introduces a novel hybrid, {EntreeC}, a system that combines knowledge-based recommendation and collaborative filtering to recommend restaurants. Further, we show that semantic ratings obtained from the knowledge-based part of the system enhance the effectiveness of collaborative filtering.},
+	pages = {331--370},
+	number = {4},
+	journaltitle = {User Modeling and User-Adapted Interaction},
+	shortjournal = {User Model User-Adap Inter},
+	author = {Burke, Robin},
+	urldate = {2022-05-30},
+	date = {2002-11-01},
+	langid = {english},
+	keywords = {case-based reasoning, collaborative filtering, recommender systems},
+	file = {Full Text PDF:/Users/d067617/Zotero/storage/JBDPS6CW/Burke - 2002 - Hybrid Recommender Systems Survey and Experiments.pdf:application/pdf},
+}
+
+@incollection{gunawardana_evaluating_2022,
+	location = {New York, {NY}},
+	title = {Evaluating Recommender Systems},
+	isbn = {978-1-07-162197-4},
+	url = {https://doi.org/10.1007/978-1-0716-2197-4_15},
+	abstract = {Recommender systems are now popular both commercially and in the research community, where many approaches have been suggested for providing recommendations. In many cases a system designer that wishes to employ a recommendater system must choose between a set of candidate approaches. A first step towards selecting an appropriate algorithm is to decide which properties of the application to focus upon when making this choice. Indeed, recommender systems have a variety of properties that may affect user experience, such as accuracy, robustness, scalability, and so forth. In this paper we discuss how to compare recommenders based on a set of properties that are relevant for the application. We focus on comparative studies, where a few algorithms are compared using some evaluation metric, rather than absolute benchmarking of algorithms. We describe experimental settings appropriate for making choices between algorithms. We review three types of experiments, starting with an offline setting, where recommendation approaches are compared without user interaction, then reviewing user studies, where a small group of subjects experiment with the system and report on the experience, and finally describe large scale online experiments, where real user populations interact with the system. In each of these cases we describe types of questions that can be answered, and suggest protocols for experimentation. We also discuss how to draw trustworthy conclusions from the conducted experiments. We then review a large set of properties, and explain how to evaluate systems given relevant properties. We also survey a large set of evaluation metrics in the context of the property that they evaluate.},
+	pages = {547--601},
+	booktitle = {Recommender Systems Handbook},
+	publisher = {Springer {US}},
+	author = {Gunawardana, Asela and Shani, Guy and Yogev, Sivan},
+	editor = {Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
+	urldate = {2022-05-30},
+	date = {2022},
+	langid = {english},
+	doi = {10.1007/978-1-0716-2197-4_15},
+}
+
+@incollection{ricci_recommender_2022,
+	location = {New York, {NY}},
+	title = {Recommender Systems: Techniques, Applications, and Challenges},
+	isbn = {978-1-07-162197-4},
+	url = {https://doi.org/10.1007/978-1-0716-2197-4_1},
+	shorttitle = {Recommender Systems},
+	abstract = {Recommender systems ({RSs}) are software tools and techniques that provide suggestions for items that are most likely of interest to a particular user. In this introductory chapter, we briefly discuss basic {RS} ideas and concepts. Our main goal is to delineate, in a coherent and structured way, the chapters in this handbook. Additionally, we aim to help the reader navigate the rich and detailed content that this handbook offers.},
+	pages = {1--35},
+	booktitle = {Recommender Systems Handbook},
+	publisher = {Springer {US}},
+	author = {Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
+	editor = {Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
+	urldate = {2022-05-30},
+	date = {2022},
+	langid = {english},
+	doi = {10.1007/978-1-0716-2197-4_1},
+}
+
+@article{knijnenburg_explaining_2012,
+	title = {Explaining the user experience of recommender systems},
+	volume = {22},
+	issn = {0924-1868, 1573-1391},
+	url = {http://link.springer.com/10.1007/s11257-011-9118-4},
+	doi = {10.1007/s11257-011-9118-4},
+	pages = {441--504},
+	number = {4},
+	journaltitle = {User Modeling and User-Adapted Interaction},
+	shortjournal = {User Model User-Adap Inter},
+	author = {Knijnenburg, Bart P. and Willemsen, Martijn C. and Gantner, Zeno and Soncu, Hakan and Newell, Chris},
+	urldate = {2022-05-30},
+	date = {2012-10},
+	langid = {english},
+	file = {Full Text:/Users/d067617/Zotero/storage/ZT95FFGX/Knijnenburg et al. - 2012 - Explaining the user experience of recommender syst.pdf:application/pdf},
+}
+
+@incollection{nikolakopoulos_trust_2022,
+	location = {New York, {NY}},
+	title = {Trust Your Neighbors: A Comprehensive Survey of Neighborhood-Based Methods for Recommender Systems},
+	isbn = {978-1-07-162197-4},
+	url = {https://doi.org/10.1007/978-1-0716-2197-4_2},
+	shorttitle = {Trust Your Neighbors},
+	abstract = {Collaborative recommendation approaches based on nearest-neighbors are still highly popular today due to their simplicity, their efficiency, and their ability to produce accurate and personalized recommendations. This chapter offers a comprehensive survey of neighborhood-based methods for the item recommendation problem. It presents the main characteristics and benefits of such methods, describes key design choices for implementing a neighborhood-based recommender system, and gives practical information on how to make these choices. A broad range of methods is covered in the chapter, including traditional algorithms like k-nearest neighbors as well as advanced approaches based on matrix factorization, sparse coding and random walks.},
+	pages = {39--89},
+	booktitle = {Recommender Systems Handbook},
+	publisher = {Springer {US}},
+	author = {Nikolakopoulos, Athanasios N. and Ning, Xia and Desrosiers, Christian and Karypis, George},
+	editor = {Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
+	urldate = {2022-05-30},
+	date = {2022},
+	langid = {english},
+	doi = {10.1007/978-1-0716-2197-4_2},
+	file = {Submitted Version:/Users/d067617/Zotero/storage/KYLB5XL6/Nikolakopoulos et al. - 2022 - Trust Your Neighbors A Comprehensive Survey of Ne.pdf:application/pdf},
+}
+
+@incollection{koren_advances_2022,
+	location = {New York, {NY}},
+	title = {Advances in Collaborative Filtering},
+	isbn = {978-1-07-162197-4},
+	url = {https://doi.org/10.1007/978-1-0716-2197-4_3},
+	abstract = {Collaborative filtering ({CF}) methods produce recommendations based on usage patterns without the need of exogenous information about items or users. {CF} algorithms have shown great prediction quality both in academic research and in industrial applications. This chapter surveys core methods in the field. Matrix factorization techniques, which became a first choice for implementing {CF}, are described together with other innovations. We also describe several extensions that bring competitive accuracy into neighborhood methods, which used to dominate the field. The chapter demonstrates how to utilize temporal models and implicit feedback to extend model accuracy. In passing, we illustrate the use of {CF} algorithms on the Netflix Prize competition. The {CF} methods discussed in this chapter have been proposed a decade ago but still show state-of-the art accuracy in recent studies. The modeling patterns identified in this chapter are applicable to a variety of recommender problems such as item recommendation, rating prediction, cold start recommendation and context-aware recommenders.},
+	pages = {91--142},
+	booktitle = {Recommender Systems Handbook},
+	publisher = {Springer {US}},
+	author = {Koren, Yehuda and Rendle, Steffen and Bell, Robert},
+	editor = {Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
+	urldate = {2022-05-30},
+	date = {2022},
+	langid = {english},
+	doi = {10.1007/978-1-0716-2197-4_3},
+}
+
+@incollection{zhang_deep_2022,
+	location = {New York, {NY}},
+	title = {Deep Learning for Recommender Systems},
+	isbn = {978-1-07-162197-4},
+	url = {https://doi.org/10.1007/978-1-0716-2197-4_5},
+	abstract = {Deep neural networks have been serving as the main driving force for the emergence of cutting-edge applications in many areas including computer vision, speech recognition, natural language processing, etc. In the meantime, deep neural networks based recommender systems have demonstrated impressive abilities in performance improvements, and have led to breakthroughs in some largely underexplored tasks. Examples are recommender systems with integrated multimodal/unstructured data and temporal dynamics. This chapter provides an overview of deep neural networks based recommender systems, with two aims. One is to explain how deep neural networks can be applied to recommendation tasks and the other is to review the recent progress in this field. Specifically, we begin with basic concepts and terminologies about deep neural networks and how they are applied to recommender systems. We then present an overview of the state-of-the-art deep learning based recommendation algorithms, and discuss their strengths and limitations. Finally, we provide an outlook on the future trends and directions which might lead to the next generation of recommender systems.},
+	pages = {173--210},
+	booktitle = {Recommender Systems Handbook},
+	publisher = {Springer {US}},
+	author = {Zhang, Shuai and Tay, Yi and Yao, Lina and Sun, Aixin and Zhang, Ce},
+	editor = {Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
+	urldate = {2022-05-30},
+	date = {2022},
+	langid = {english},
+	doi = {10.1007/978-1-0716-2197-4_5},
+}
+
+@incollection{adomavicius_context-aware_2022,
+	location = {New York, {NY}},
+	title = {Context-Aware Recommender Systems: From Foundations to Recent {DevelopmentsContext}-aware recommender systems},
+	isbn = {978-1-07-162197-4},
+	url = {https://doi.org/10.1007/978-1-0716-2197-4_6},
+	shorttitle = {Context-Aware Recommender Systems},
+	abstract = {The importance of contextual information has been recognized by researchers and practitioners in many disciplines, including e-commerce, personalization, information retrieval, ubiquitous and mobile computing, data mining, marketing, and management. Prior work has extensively demonstrated that relevant contextual information does matter in recommender systems and that it is important to take this information into account when providing recommendations. We discuss the general notion of context and major approaches to modeling it in recommender systems, including explicit vs. latent and static vs. dynamic approaches. We also discuss three popular algorithmic paradigms—contextual pre-filtering, post-filtering, and modeling—for incorporating contextual information into the recommendation process, and survey the recent advances in contextual modeling that include tensor factorization, deep learning, and reinforcement learning techniques. We also discuss important directions for future research.},
+	pages = {211--250},
+	booktitle = {Recommender Systems Handbook},
+	publisher = {Springer {US}},
+	author = {Adomavicius, Gediminas and Bauman, Konstantin and Tuzhilin, Alexander and Unger, Moshe},
+	editor = {Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
+	urldate = {2022-05-30},
+	date = {2022},
+	langid = {english},
+	doi = {10.1007/978-1-0716-2197-4_6},
+}
+
+@incollection{musto_semantics_2022,
+	location = {New York, {NY}},
+	title = {Semantics and Content-Based Recommendations},
+	isbn = {978-1-07-162197-4},
+	url = {https://doi.org/10.1007/978-1-0716-2197-4_7},
+	abstract = {Content-based recommendations suggest items similar to those the user already liked in the past by building a representation of users and items based on descriptive features, which are obtained by processing textual content or low-level characteristics of the items. In this setting, the adoption of semantics-aware representations can be very useful to build a more precise representation of users and items, and, in turn, to generate better recommendations. To this end, this chapter presents a comprehensive survey of the recent trends in the area of semantics-aware content-based recommender systems. The discussion starts with an overview of historical developments, then it covers methods for semantic representations, by splitting the approaches into exogenous and endogenous representation techniques. The former rely on the integration of external knowledge sources, while the latter are based on the hypothesis that the meaning of words depends on their usage in large corpora of textual documents. Next, we discuss recent trends in the area of semantics-aware recommendations. Such trends regard novel representation methods, based on knowledge graphs and embedding techniques, as well as the exploitation of user-generated content (tags, reviews, etc.) and multimedia features. Finally, we conclude our overview by showing how content can be used to support the construction of natural language explanations and to build conversational recommender systems.},
+	pages = {251--298},
+	booktitle = {Recommender Systems Handbook},
+	publisher = {Springer {US}},
+	author = {Musto, Cataldo and Gemmis, Marco de and Lops, Pasquale and Narducci, Fedelucio and Semeraro, Giovanni},
+	editor = {Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
+	urldate = {2022-05-30},
+	date = {2022},
+	langid = {english},
+	doi = {10.1007/978-1-0716-2197-4_7},
 }
