--- a/index.tex
+++ b/index.tex
@@ -14,7 +14,7 @@
 % DOCUMENT METADATA
 
 \author{Kevin Sieverding}
-\title{Usability of Recommender Systems}
+\title{User Experience of Recommender Systems}
 \subject{Handout}
 
 % PREAMBLE
