--- a/preamble/packages.tex
+++ b/preamble/packages.tex
@@ -9,7 +9,7 @@
 \usepackage{calc}
 
 % language support
-\usepackage[american]{babel}
+\usepackage[ngerman]{babel}
 
 % advanced support for quotations
 \usepackage[
