--- a/content/content.tex
+++ b/content/content.tex
@@ -8,7 +8,7 @@ Auch die großen Social Media Plattformen nutzen Recommender Systems, um zum Bei
 
 \section{Recommender Systems}
 
-\citeauthor{burke_hybrid_2002} definiert ein Recommendation System als \enquote{[A]ny system that produces individualized recommendations as output or has the effect of guiding the user in a personalized way to interesting or useful objects in a large space of possible options.} \parencite{burke_hybrid_2002}
+\citeauthor{burke_hybrid_2002} definiert ein Recommender System als \enquote{[A]ny system that produces individualized recommendations as output or has the effect of guiding the user in a personalized way to interesting or useful objects in a large space of possible options.} \parencite{burke_hybrid_2002}
 Generell können vier Arten von Recommender Systems unterschieden werden:
 
 \begin{description}
@@ -37,7 +37,7 @@ In der Regel verfolgen die Anbieter von Recommender Systems eines oder mehrere d
 \begin{figure}[H]
   \centering
   \includegraphics*[width=0.9\textwidth]{rs-process.png}
-  \caption{Der Prozess von Recommendation Systems}\label{fig:process}
+  \caption{Der Prozess von Recommender Systems}\label{fig:process}
 \end{figure}
 
 Abbildung \ref{fig:process} zeigt den zyklischen Prozess von Recommender Systems.
@@ -48,7 +48,7 @@ Diese Empfehlungen zielen wiederum darauf ab Nutzerverhalten zu beeinflussen.
 
 Traditionell wurden Recommender Systems häufig nur anhand der Präzision ihrer Empfehlungen gemessen, jedoch stellte sich heraus, dass auch andere Aspekte wie Bedenken zur Privatsphäre zur endgültigen Nutzererfahrung beitragen.
 
-Aus diesem Grund haben \citeauthor{knijnenburg_explaining_2012} versucht ein Modell zu entwickeln, um Recommendation Systems unter Berücksichtigung aller relevanten Aspekte zu evaluieren.
+Aus diesem Grund haben \citeauthor{knijnenburg_explaining_2012} versucht ein Modell zu entwickeln, um Recommender Systems unter Berücksichtigung aller relevanten Aspekte zu evaluieren.
 Dieses Modell ist in Abbildung \ref{fig:framework} dargestellt.
 
 \begin{figure}[H]
