--- a/index.tex
+++ b/index.tex
@@ -76,7 +76,7 @@
 
 % use to change the title of the list of listings
 % \renewcommand{\listoflistingscaption}{Quellcodeverzeichnis}
-\listoflistings
+% \listoflistings
 
 \clearpage
 
